src/main/java/org/example/errors/UserNotFoundException.java
package org.example.errors;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException() {
        super("Пользователь не найден!");
    }
}